@@ -17,6 +17,19 @@
     <template name="declaration">#class* $name;</template>
     <template name="construction">$name = new #class( #wxparent $name, $id, $bitmap, $pos, $size, $style #ifnotnull $window_style @{ |$window_style @} );</template>
     <template name="include">@#include &lt;wx/bmpbuttn.h&gt;</template>
+  	<template name="settings">
+  		#ifnotnull $disabled
+  		@{ #nl $name->SetBitmapDisabled( $disabled ); @}
+  		
+  		#ifnotnull $selected
+  		@{ #nl $name->SetBitmapSelected( $selected ); @}
+  		
+  		#ifnotnull $focus
+  		@{ #nl $name->SetBitmapFocus( $focus ); @}
+  		
+  		#ifnotnull $hover
+  		@{ #nl $name->SetBitmapHover( $hover ); @}
+  	</template>
   </templates>
 
   <templates class="wxTextCtrl">
